rancher/redis-enterprise.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: redis-enterprise
spec:
  serviceName: redis-enterprise
  replicas: 3
  template:
    metadata:
      labels:
        app: redis-enterprise
    spec:
      nodeSelector:
        dedicated: redis-enterprise
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - redis-enterprise
              topologyKey: kubernetes.io/hostname
      tolerations:
        - key: dedicated
          operator: "Equal"
          value: redis-enterprise
          effect: "NoSchedule"
      containers:
        - name: redis-enterprise
          image: redislabs/redis:4.5.0-22
          lifecycle:
            postStart:
              exec:
                command:
                  - "/bin/bash"
                  - "-c"
                  - |
                    [...]
          ports:
            - name: discovery
              containerPort: 8001
            - name: ui
              containerPort: 8443
            - name: redis
              containerPort: 26379
          resources:
            requests:
              memory: "4Gi"
              cpu: "500m"
          securityContext:
            capabilities:
              add:
                - SYS_RESOURCE
          volumeMounts:
            - name: "secrets"
              mountPath: "/opt/redislabs/config/license.key"
              subPath: license.key
            - name: "config"
              mountPath: "/opt/redislabs/config/ccs-redis.conf"
              subPath: ccs-redis.conf
            - name: "flash"
              mountPath: "/var/opt/redislabs/flash"
      volumes:
        - name: config
          configMap:
            name: redis-enterprise
        - name: secrets
          secret:
            secretName: redis-enterprise
        - name: flash
          hostPath:
            path: "/mnt/disks/ssd0"
