rancher/docker-registry-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-registry
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - venk-rancher.southeastasia.cloudapp.azure.com
    secretName: venk-rancher
  rules:
  - host: venk-rancher.southeastasia.cloudapp.azure.com
    http:
      paths:
      - path: /registry
        backend:
          serviceName: docker-registry
          servicePort: 5000
